--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,21 +1,35 @@
 {
-  "name": "frontend",
+  "name": "breeze-next",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix"
   },
   "dependencies": {
-    "autoprefixer": "10.4.14",
-    "eslint": "8.41.0",
-    "eslint-config-next": "13.4.4",
-    "next": "13.4.4",
-    "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "@headlessui/react": "^1.4.2",
+    "axios": "^0.21.1",
+    "next": "^13.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "swr": "^1.3.0"
+  },
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.12.1",
+    "@babel/preset-react": "^7.18.6",
+    "@next/eslint-plugin-next": "^10.0.4",
+    "@tailwindcss/forms": "^0.5.2",
+    "autoprefixer": "^10.4.2",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.27.0",
+    "eslint-config-next": "13.0.3",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.0",
+    "postcss": "^8.4.6",
+    "prettier": "2.2.1",
+    "tailwindcss": "^3.0.22"
   }
 }
